Update resume with detailed job responsibilities
Enhanced job responsibilities and skills in the resume, including detailed descriptions of microservices development, API design, and Agile practices.

--- a/resume.tex
+++ b/resume.tex
@@ -66,13 +66,13 @@ Resourceful individual with 3+ years of hands-on experience in software developm
 \vspace{-4pt}
 \begin{itemize}
   \item Responsible for growing and enhancing multi-tier web applications by developing, testing, and maintaining microservices following best practices, Ensuring client satisfaction by maintaining bug-free applications using Agile methodology.
-  \item Writing clean, efficient, well-tested code with proper peer reviews. Collaborating with teams to understand requirements and deliver updates.
+  \item Writing clean, efficient, well-tested code with proper peer reviews. By leveraged Core Java and Spring Framework (Spring Boot ) to build scalable and secure RESTful API services and gained a deep understanding of Java8 with extensive experience in Object-Oriented Programming (OOP), multithreading with thread safety , Stream API, functional interfaces and exception handling concepts
+
   \item Actively participated in peer code reviews and design sessions with senior developers and architects, reducing merge request rework and ensuring smoother handoffs to QA and deployment teams.
   \item Involved the migration of legacy systems to NSA architecture, enhancing scalability and performance.
-  \item Utilized Spring Boot and Spring Boot reactive frameworks to optimize data transactions and improve project flow. Integrated Cassandra for robust database handling, establishing efficient read and write operations within the system.
- \item Contributed to the Billing Domain, overseeing data consolidation and facilitating seamless integration with front-end systems.
- \item Implemented new features and product in the cart domain, including dynamic updates and instant bill previews, improving customer
-experience.
+  \item Extensive experience with relational databases (Oracle, MySQL, PostgreSQL), including complex SQL queries and database optimization. Integrated Cassandra db for robust database handling, establishing efficient read and write operations within the system. 
+  
+ \item Proficient in Swagger/POSTMAN for documenting and designing RESTful APIs. Strong experience in building and consuming REST APIs.
 
 \item  Collaborated with product owners, QA, and architects in Agile/Scrum ceremonies to refine requirements and deliver robust, high-quality implementations, improving delivery predictability and stakeholder satisfaction.
 
@@ -86,7 +86,7 @@ experience.
 \textbf{Senior Associate Consultant} \hfill Sept 2025 -- Present
 \begin{itemize}
 
-\item Implemented new product functionality end-to-end in the update-cart endpoint through clean layering and focused backend changes using Java 8/17, Spring Boot, Spring Data JPA, and Spring Reactive, improving code modularity and maintainability.
+\item Implemented new product functionality end-to-end in the update-cart endpoint through clean layering and focused backend changes using Java 8/17, Spring Boot, exception handiling, Spring Data JPA, and Spring Reactive, improving code modularity and maintainability.
 \item Added safe rollout controls with feature-flag gating, enabling instant turn OFF of new flows during critical releases and reducing emergency rollback incidents.
 
 \item Wrote comprehensive unit test cases using JUnit and Mockito, maintaining over 95\% code coverage for newly added modules and minimizing post-release defects.
@@ -95,7 +95,7 @@ experience.
 
 \item Built and deployed services across non-prod and prod environments via Jenkins and GitLab CI, achieving a ~99\% deployment success rate.
 
-\item Performed API validation and coordinated integration testing in beta(non-prod) environments using Postman and Kibana, identifying regressions early.
+\item Performed API validation and coordinated integration testing in beta(non-prod) environments using Postman and Kibana, logging with Log4j to identifying regressions early.
 
 \end{itemize}
 \vspace{-18pt} % <-- ADD THIS LINE to reduce the space
@@ -160,6 +160,8 @@ experience.
 \section*{Strengths}
 \begin{itemize}
   \item Continuous learner with strong technology adoption capability.
+  \item Excellent communication, organizational skills, and team collaboration, demonstrated by leading offshore teams and working in Agile/Scrum environment
+
   \item Active listener and fast learner with strong interpersonal skills.
   \item Ability to handle multiple tasks efficiently.
   \item Strong collaboration skills in distributed environments.
